add more example

--- a/hello_dev/Makefile
+++ b/hello_dev/Makefile
@@ -1,5 +1,5 @@
 ifneq ($(KERNELRELEASE),)  
-	obj-m := hello_printk.o        #设置模块名字
+	obj-m := hello_dev.o        #设置模块名字
 else
 	KERNELDIR :=/lib/modules/$(shell uname -r)/build   #将目录改为内核所在目录
 	PWD := $(shell pwd)  
